fix alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,8 @@ input[type="submit"]:hover {
     flex: 1;
     margin-right: 20px;
     padding: 20px;
+    max-width: 800px;
+    word-wrap: break-word;
 }
 
 .about-image {
@@ -217,8 +219,8 @@ input[type="submit"]:hover {
 img {
     border-radius: 50%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 40%;
-    height: 65%;
+    width: 35%;
+    height: 60%;
 }
 
 /* About Us */
